--- a/src/global.css
+++ b/src/global.css
@@ -1,98 +1,105 @@
 * {
-  box-sizing: border-box;
+	box-sizing: border-box;
 }
 
 :root {
-  --user-font-scale: 1rem - 16px;
-  --max-width: calc(100% - 1rem);
+	--user-font-scale: 1rem - 16px;
+	--max-width: calc(100% - 1rem);
 
-  --font-body: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif,
-    Apple Color Emoji, Segoe UI Emoji;
-  --font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono', 'Lucida Console',
-    'Lucida Sans Typewriter', 'DejaVu Sans Mono', 'Bitstream Vera Sans Mono', 'Liberation Mono',
-    'Nimbus Mono L', Monaco, 'Courier New', Courier, monospace;
+	--font-body: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI,
+		Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
+	--font-mono: 'IBM Plex Mono', Consolas, 'Andale Mono WT', 'Andale Mono',
+		'Lucida Console', 'Lucida Sans Typewriter', 'DejaVu Sans Mono',
+		'Bitstream Vera Sans Mono', 'Liberation Mono', 'Nimbus Mono L', Monaco,
+		'Courier New', Courier, monospace;
 
-  color-scheme: light;
-  --theme-accent: #006ce9;
-  --theme-text: #181818;
+	color-scheme: light;
+	--theme-accent: #006ce9;
+	--theme-text: #181818;
 }
 
 @media (min-width: 50em) {
-  :root {
-    --max-width: 46em;
-  }
+	:root {
+		--max-width: 46em;
+	}
 }
 
 body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  font-family: var(--font-body);
-  font-size: 1rem;
-  font-size: clamp(0.9rem, 0.75rem + 0.375vw + var(--user-font-scale), 1rem);
-  line-height: 1.5;
-  max-width: 100vw;
-  background: var(--theme-bg);
-  color: var(--theme-text);
+	display: flex;
+	flex-direction: column;
+	min-height: 100vh;
+	font-family: var(--font-body);
+	font-size: 1rem;
+	font-size: clamp(0.9rem, 0.75rem + 0.375vw + var(--user-font-scale), 1rem);
+	line-height: 1.5;
+	max-width: 100vw;
+	background: var(--theme-bg);
+	color: var(--theme-text);
 }
 
 main {
-  padding: 10px 20px;
-  max-width: 960px;
-  margin: 0 auto;
+	padding: 10px 20px;
+	max-width: 960px;
+	margin: 0 auto;
 }
 
 a {
-  color: var(--theme-accent);
+	color: var(--theme-accent);
 }
 
 a:hover {
-  text-decoration: none;
+	text-decoration: none;
 }
 
 code,
 kbd,
 samp,
 pre {
-  font-family: var(--font-mono);
+	font-family: var(--font-mono);
 }
 
 code {
-  background-color: rgb(224, 224, 224);
-  padding: 2px 4px;
-  border-radius: 3px;
-  font-size: 0.9em;
-  border-bottom: 2px solid #bfbfbf;
+	background-color: rgb(224, 224, 224);
+	padding: 2px 4px;
+	border-radius: 3px;
+	font-size: 0.9em;
+	border-bottom: 2px solid #bfbfbf;
 }
 
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
 html.has-scroll-smooth {
-	overflow: hidden; }
+	overflow: hidden;
+}
 
-  html.has-scroll-dragging {
+html.has-scroll-dragging {
 	-webkit-user-select: none;
 	-moz-user-select: none;
 	-ms-user-select: none;
-	user-select: none; }
+	user-select: none;
+}
 
-  .has-scroll-smooth body {
-	overflow: hidden; }
+.has-scroll-smooth body {
+	overflow: hidden;
+}
 
-  .has-scroll-smooth [data-scroll-container] {
-	min-height: 100vh; }
+.has-scroll-smooth [data-scroll-container] {
+	min-height: 100vh;
+}
 
-  [data-scroll-direction="horizontal"] [data-scroll-container] {
+[data-scroll-direction='horizontal'] [data-scroll-container] {
 	height: 100vh;
 	display: inline-block;
-	white-space: nowrap; }
+	white-space: nowrap;
+}
 
-  [data-scroll-direction="horizontal"] [data-scroll-section] {
+[data-scroll-direction='horizontal'] [data-scroll-section] {
 	display: inline-block;
 	vertical-align: top;
 	white-space: nowrap;
-	height: 100%; }
+	height: 100%;
+}
 
-  .c-scrollbar {
+.c-scrollbar {
 	position: absolute;
 	right: 0;
 	top: 0;
@@ -100,21 +107,28 @@ html.has-scroll-smooth {
 	height: 100%;
 	transform-origin: center right;
 	transition: transform 0.3s, opacity 0.3s;
-	opacity: 0; }
-	.c-scrollbar:hover {
-	  transform: scaleX(1.45); }
-	.c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
-	  opacity: 1; }
-	[data-scroll-direction="horizontal"] .c-scrollbar {
-	  width: 100%;
-	  height: 10px;
-	  top: auto;
-	  bottom: 0;
-	  transform: scaleY(1); }
-	  [data-scroll-direction="horizontal"] .c-scrollbar:hover {
-		transform: scaleY(1.3); }
+	opacity: 0;
+}
+.c-scrollbar:hover {
+	transform: scaleX(1.45);
+}
+.c-scrollbar:hover,
+.has-scroll-scrolling .c-scrollbar,
+.has-scroll-dragging .c-scrollbar {
+	opacity: 1;
+}
+[data-scroll-direction='horizontal'] .c-scrollbar {
+	width: 100%;
+	height: 10px;
+	top: auto;
+	bottom: 0;
+	transform: scaleY(1);
+}
+[data-scroll-direction='horizontal'] .c-scrollbar:hover {
+	transform: scaleY(1.3);
+}
 
-  .c-scrollbar_thumb {
+.c-scrollbar_thumb {
 	position: absolute;
 	top: 0;
 	right: 0;
@@ -124,10 +138,13 @@ html.has-scroll-smooth {
 	border-radius: 10px;
 	margin: 2px;
 	cursor: -webkit-grab;
-	cursor: grab; }
-	.has-scroll-dragging .c-scrollbar_thumb {
-	  cursor: -webkit-grabbing;
-	  cursor: grabbing; }
-	[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
-	  right: auto;
-	  bottom: 0; }
+	cursor: grab;
+}
+.has-scroll-dragging .c-scrollbar_thumb {
+	cursor: -webkit-grabbing;
+	cursor: grabbing;
+}
+[data-scroll-direction='horizontal'] .c-scrollbar_thumb {
+	right: auto;
+	bottom: 0;
+}
