update color state test

--- a/src/components/layout/mainNav/main-nav.scss
+++ b/src/components/layout/mainNav/main-nav.scss
@@ -45,6 +45,7 @@
 			width: 100%;
 			z-index: 33;
 			background-color: var(--surface2);
+			height: 160px;
 
 
 			// checkbox ------------------------------------------------ //
