--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,4 +1,4 @@
-header {
+/* header {
 	position: sticky;
 	top: 0;
 	z-index: 11;
@@ -31,4 +31,4 @@ header nav a {
 
 header nav a:hover {
 	text-decoration: underline;
-}
+} */
