--- a/src/scss/00-vars/_colors-shemes.scss
+++ b/src/scss/00-vars/_colors-shemes.scss
@@ -28,8 +28,8 @@
 }
 
 :root {
-	color-scheme: light;
-	@include light-sheme;
+	color-scheme: dark;
+	@include dark-sheme;
 }
 
 @media (prefers-color-scheme: dark) {
