feat: update base styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,2 +1,3 @@
-@import "/src/scss/00-vars/00-vars";
-@import "/src/scss/grid/main";
+@import '/src/scss/00-vars/00-vars';
+@import '/src/scss/grid/main';
+@import '/src/scss/layout/main';
