--- a/src/components/QwikTextField/style.scss
+++ b/src/components/QwikTextField/style.scss
@@ -1,4 +1,5 @@
 .textfield {
+	background: var(--surface6);
 	position: relative;
 	margin-bottom: 30px;
 
@@ -26,6 +27,7 @@
 	> span {
 		position: absolute;
 		color: rgba(0, 0, 0, 0.5);
+		color: var(--text4);
 		translate: 0 -50%;
 		transition: 0.4s;
 		pointer-events: none;
@@ -39,7 +41,7 @@
 	> label {
 		top: 50%;
 		left: 30px;
-		color: black;
+		color: var(--text4);
 	}
 
 	> :is(input:focus) ~ .underline {
@@ -54,25 +56,25 @@
 	> :is(input:focus) ~ label {
 		translate: -40px -40px;
 		scale: 0.8;
-		color: black;
+		color: var(--text4);
 	}
 
 	> :is(input.valid) ~ label {
 		translate: -40px -40px;
 		scale: 0.8;
-		color: black;
+		color: var(--text4);
 	}
 
 	> :is(input.invalid) ~ label {
 		translate: -40px -40px;
 		scale: 0.8;
-		color: black;
+		color: var(--text4);
 	}
 
 	> :is(input.invalid.anim) ~ label {
 		translate: -40px -40px;
 		scale: 0.8;
-		color: black;
+		color: var(--text4);
 		animation: shake 0.3s ease-in-out;
 	}
 
