feat: add styling

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,4 @@
 @import '/src/scss/00-vars/00-vars';
 @import '/src/scss/grid/main';
 @import '/src/scss/layout/main';
+@import '/src/scss/2-base/2-base';
