--- a/src/scss/grid/_vars.scss
+++ b/src/scss/grid/_vars.scss
@@ -5,7 +5,7 @@ $basicGrid__outer: 0 !default;
 $gutter: 1.8rem !default;
 
 $basicGrid__sizes: (
-	"small": 0,
-	"medium": 640px,
-	"large": 1024px,
+	'small': 0,
+	'medium': 640px,
+	'large': 1024px,
 ) !default;
