--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @import '/src/scss/00-vars/00-vars';
+@import '/src/scss/00-vars/colors-shemes';
 @import '/src/scss/grid/main';
 @import '/src/scss/layout/main';
 @import '/src/scss/2-base/2-base';
