--- a/src/scss/2-base/_body.scss
+++ b/src/scss/2-base/_body.scss
@@ -1,3 +1,5 @@
+@use './../1-helpers/0-mixins/color-contrast';
+
 body {
 	// background: var(--brand);
 	// color: var(--text4);
@@ -5,8 +7,6 @@ body {
 	display: flex;
 	flex-direction: column;
 	background-color: var(--surface1);
-
-
 
 	// Better font rendering for Webkit and Firefox
 	-webkit-font-smoothing: antialiased;
