--- a/src/scss/2-base/_html.scss
+++ b/src/scss/2-base/_html.scss
@@ -6,7 +6,7 @@ html {
 	// but wants to fill the whole page using min-height.
 	width: 100%;
 	height: 100%;
-	@include color-contrast.text-contrast(var(--surface3));
+	// @include color-contrast.text-contrast(var(--surface3));
 	scroll-behavior: smooth;
 	// Set the font-size in the root element as rem is relative to the document root
 	// font: $fontStackBarlowLight;
