--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,13 +1,18 @@
 footer {
-	border-top: 0.5px solid #ddd;
-	margin-top: 40px;
-	padding: 20px;
+	border-top: 0.5px solid var(--surface4);
+	/* margin-top: 140px; */
+	width: 100%;
+	padding: 30px 0;
 	text-align: center;
+	background-color: var(--surface1);
+	position: fixed;
+	left: 0;
+	bottom: 0;
 }
 
 footer a {
-	color: #333;
-	font-size: 12px;
+	/* color: #333; */
+	/* font-size: 12px; */
 }
 
 footer ul {
