--- a/src/scss/2-base/_typography.scss
+++ b/src/scss/2-base/_typography.scss
@@ -72,6 +72,7 @@ ol,
 ul,
 label,
 blockquote {
+	font-family: 'Montserrat';
 	margin: 0 0 math.div(vars.$gutter, 2);
 	font-style: normal;
 	font-size: 1.125rem;
