--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -1,6 +1,6 @@
 // _2-base Styles ------------------------------------------------------ //
-@import 'html';
-@import 'body';
+@use 'html';
+@use 'body';
 // @import 'img';
 // @import 'table';
 // @import 'hr';
@@ -23,7 +23,7 @@
 // @import 'mobile_menu';
 // @import 'ui_page';
 // @import 'blockquote';
-@import 'typography';
+@use 'typography';
 // @import 'lists';
 // @import 'code';
 // // @import 'navigation';
