feat: container and clean up

--- a/src/scss/grid/_row.scss
+++ b/src/scss/grid/_row.scss
@@ -2,6 +2,12 @@
 @use 'vars';
 @use 'mixins';
 
+.container {
+	margin: 0 auto;
+	width: 100%;
+	max-width: vars.$basicGrid__width;
+}
+
 .row {
 	display: flex;
 	flex-wrap: wrap;
