--- a/src/global.css
+++ b/src/global.css
@@ -79,3 +79,475 @@ html.has-scroll-dragging {
 	right: auto;
 	bottom: 0;
 }
+
+/* ////////////////////////////////////////////////////////////////// */
+
+.c-section {
+	position: relative;
+}
+
+@media (max-width: 1199px) {
+	.c-section {
+		margin-bottom: 10vh;
+		padding-bottom: 10vh;
+	}
+}
+
+@media (min-width: 1200px) {
+	.c-section {
+		margin-bottom: 35vh;
+	}
+}
+
+.c-section_infos {
+	max-width: 320px;
+	position: relative;
+	z-index: 0;
+}
+
+@media (min-width: 1000px) {
+	.c-section_infos {
+		padding-top: 7.5rem;
+	}
+
+	.c-section_infos.-padding {
+		padding-top: 35vh;
+	}
+}
+
+@media (max-width: 999px) {
+	.c-section_infos {
+		margin-bottom: 1.875rem;
+	}
+}
+
+.c-section_infos_inner > * {
+	opacity: 0;
+	transform: translateY(60px);
+	transition: opacity 0.6s cubic-bezier(0.215, 0.61, 0.355, 1),
+		transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.c-section_infos_inner.is-inview > * {
+	opacity: 1;
+	transform: none;
+}
+
+.c-section_infos_inner.is-inview > :first-child {
+	transition-delay: 0.06s;
+}
+
+.c-section_infos_inner.is-inview > :nth-child(2) {
+	transition-delay: 0.12s;
+}
+
+.c-section_infos_inner.is-inview > :nth-child(3) {
+	transition-delay: 0.18s;
+}
+
+.c-sections_infos_text {
+	margin-top: 1.25rem;
+}
+
+.o-container {
+	margin-left: auto;
+	margin-right: auto;
+	max-width: 95rem;
+}
+
+@media (max-width: 699px) {
+	.o-container {
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+}
+
+@media (min-width: 700px) {
+	.o-container {
+		padding-left: 2.5rem;
+		padding-right: 2.5rem;
+	}
+}
+
+.u-text-center {
+	text-align: center !important;
+}
+
+.u-text-left {
+	text-align: left !important;
+}
+
+.u-text-right {
+	text-align: right !important;
+}
+
+.u-text {
+	font-size: 0.875rem;
+}
+
+.o-layout {
+	font-size: 0;
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+.o-layout.-gutter {
+	margin-left: -3.75rem;
+}
+
+.o-layout.-gutter-small {
+	margin-left: -1.875rem;
+}
+
+.o-layout.-center {
+	text-align: center;
+}
+
+.o-layout.-right {
+	text-align: right;
+}
+
+.o-layout.-reverse {
+	direction: rtl;
+}
+
+.o-layout.-reverse.-flex {
+	flex-direction: row-reverse;
+}
+
+.o-layout.-flex {
+	display: flex;
+}
+
+.o-layout.-flex.-top {
+	align-items: flex-start;
+}
+
+.o-layout.-flex.-middle {
+	align-items: center;
+}
+
+.o-layout.-flex.-bottom {
+	align-items: flex-end;
+}
+
+.o-layout.-stretch {
+	align-items: stretch;
+}
+
+.o-layout_item {
+	display: inline-block;
+	font-size: 1rem;
+	padding-left: 0;
+	vertical-align: top;
+	width: 100%;
+}
+
+.o-layout.-gutter > .o-layout_item {
+	padding-left: 3.75rem;
+}
+
+.o-layout.-gutter-small > .o-layout_item {
+	padding-left: 1.875rem;
+}
+
+.o-layout.-middle > .o-layout_item {
+	vertical-align: middle;
+}
+
+.o-layout.-bottom > .o-layout_item {
+	vertical-align: bottom;
+}
+
+.o-layout.-center > .o-layout_item,
+.o-layout.-reverse > .o-layout_item,
+.o-layout.-right > .o-layout_item {
+	text-align: left;
+}
+
+.o-layout.-reverse > .o-layout_item {
+	direction: ltr;
+}
+
+html.is-ready .o-layout_item:nth-child(2) .c-header_heading_label {
+	transition-delay: 0.1s;
+}
+.c-section_infos {
+	max-width: 320px;
+	position: relative;
+	z-index: 0;
+}
+
+@media (min-width: 1000px) {
+	.c-section_infos {
+		padding-top: 7.5rem;
+	}
+
+	.c-section_infos.-padding {
+		padding-top: 35vh;
+	}
+}
+
+@media (max-width: 999px) {
+	.c-section_infos {
+		margin-bottom: 1.875rem;
+	}
+}
+
+.c-section_infos_inner > * {
+	opacity: 0;
+	transform: translateY(60px);
+	transition: opacity 0.6s cubic-bezier(0.215, 0.61, 0.355, 1),
+		transform 0.6s cubic-bezier(0.215, 0.61, 0.355, 1);
+}
+
+.c-section_infos_inner.is-inview > * {
+	opacity: 1;
+	transform: none;
+}
+
+.c-section_infos_inner.is-inview > :first-child {
+	transition-delay: 0.06s;
+}
+
+.c-section_infos_inner.is-inview > :nth-child(2) {
+	transition-delay: 0.12s;
+}
+
+.c-section_infos_inner.is-inview > :nth-child(3) {
+	transition-delay: 0.18s;
+}
+
+.c-image.is-inview {
+	opacity: 1;
+	transition-delay: 0.6s;
+}
+
+.c-section_infos_inner.is-inview > * {
+	opacity: 1;
+	transform: none;
+}
+
+.c-section_infos_inner.is-inview > :first-child {
+	transition-delay: 0.06s;
+}
+
+.c-section_infos_inner.is-inview > :nth-child(2) {
+	transition-delay: 0.12s;
+}
+
+.c-section_infos_inner.is-inview > :nth-child(3) {
+	transition-delay: 0.18s;
+}
+
+.c-summary_list_item.is-inview .c-summary_list_icon {
+	opacity: 1;
+	transform: translateY(-50%) rotate(0deg);
+}
+
+.c-summary_list_item.is-inview:first-child .c-summary_list_icon {
+	transition-delay: 0.6s;
+}
+
+.c-summary_list_item.is-inview:nth-child(2) .c-summary_list_icon {
+	transition-delay: 0.7s;
+}
+
+.c-summary_list_item.is-inview:nth-child(3) .c-summary_list_icon {
+	transition-delay: 0.8s;
+}
+
+.c-summary_list_item.is-inview:nth-child(4) .c-summary_list_icon {
+	transition-delay: 0.9s;
+}
+
+.c-summary_list_item.is-inview:nth-child(5) .c-summary_list_icon {
+	transition-delay: 1s;
+}
+
+.c-summary_list_item.is-inview:nth-child(6) .c-summary_list_icon {
+	transition-delay: 1.1s;
+}
+
+.c-summary_list_item.is-inview {
+	opacity: 1;
+	transform: none;
+}
+
+.c-summary_list_item.is-inview:after {
+	transform: scaleX(1);
+}
+
+.c-summary_list_item.is-inview:first-child {
+	transition-delay: 0.1s;
+}
+
+.c-summary_list_item.is-inview:first-child:after {
+	transition-delay: 0.5s;
+}
+
+.c-summary_list_item.is-inview:nth-child(2) {
+	transition-delay: 0.2s;
+}
+
+.c-summary_list_item.is-inview:nth-child(2):after {
+	transition-delay: 0.6s;
+}
+
+.c-summary_list_item.is-inview:nth-child(3) {
+	transition-delay: 0.3s;
+}
+
+.c-summary_list_item.is-inview:nth-child(3):after {
+	transition-delay: 0.7s;
+}
+
+.c-summary_list_item.is-inview:nth-child(4) {
+	transition-delay: 0.4s;
+}
+
+.c-summary_list_item.is-inview:nth-child(4):after {
+	transition-delay: 0.8s;
+}
+
+.c-summary_list_item.is-inview:nth-child(5) {
+	transition-delay: 0.5s;
+}
+
+.c-summary_list_item.is-inview:nth-child(5):after {
+	transition-delay: 0.9s;
+}
+
+.c-summary_list_item.is-inview:nth-child(6) {
+	transition-delay: 0.6s;
+}
+
+.c-summary_list_item.is-inview:nth-child(6):after {
+	transition-delay: 1s;
+}
+
+.c-summary.is-inview .c-summary_text {
+	opacity: 1;
+	transform: none;
+}
+
+.c-intro.is-inview {
+	opacity: 1;
+	transform: none;
+	transition-delay: 0.3s;
+}
+
+.c-header_line.is-inview {
+	transform: scaleX(1);
+}
+
+.o-image.is-inview img {
+	opacity: 1;
+	transform: scale(1);
+	transition-delay: 0.6s;
+}
+
+.o-title.is-inview .o-title_line {
+	opacity: 1;
+	transform: none;
+}
+
+.o-title.is-inview .o-title_line:first-child {
+	transition-delay: 0.4s;
+}
+
+.o-title.is-inview .o-title_line:nth-child(2) {
+	transition-delay: 0.5s;
+}
+
+.o-title.is-inview .o-title_line:nth-child(3) {
+	transition-delay: 0.6s;
+}
+
+.o-title.is-inview .o-title_line:nth-child(4) {
+	transition-delay: 0.7s;
+}
+.c-speed-block_title.is-inview {
+	opacity: 1;
+	transform: none;
+	transition-delay: 0.3s;
+}
+.c-speed-block_bubble.is-inview:before {
+	transform: scale(1);
+	transition-delay: 0.3s;
+}
+.c-lerp-block_index.is-inview:before {
+	transform: scale(1);
+	transition-delay: 0.3s;
+}
+
+.c-lerp-block_title.is-inview > span:not([data-scroll]) {
+	opacity: 1;
+	transform: none;
+	transition-delay: 0.4s;
+}
+
+.c-cta_line.is-inview {
+	transform: scaleX(1);
+}
+
+.c-cta_content_text.is-inview > * {
+	opacity: 1;
+	transform: none;
+}
+
+.c-cta_content_text.is-inview > :first-child {
+	transition-delay: 0.06s;
+}
+
+.c-cta_content_text.is-inview > :nth-child(2) {
+	transition-delay: 0.12s;
+}
+
+.c-cta_content_text.is-inview > :nth-child(3) {
+	transition-delay: 0.18s;
+}
+
+.c-fixed_wrapper {
+	background-color: #d4c9c9;
+	overflow: hidden;
+	position: relative;
+}
+
+@media (min-width: 1000px) {
+	.c-fixed_wrapper {
+		height: 100vh;
+	}
+}
+
+@media (max-width: 999px) {
+	.c-fixed_wrapper {
+		height: 50vh;
+	}
+}
+
+.c-fixed_target {
+	bottom: -100vh;
+}
+
+.c-fixed,
+.c-fixed_target {
+	left: 0;
+	position: absolute;
+	right: 0;
+	top: -100vh;
+}
+
+.c-fixed {
+	background-position: 50%;
+	background-size: cover;
+	height: 100%;
+	mix-blend-mode: multiply;
+	opacity: 0.75;
+}
+
+.c-cta_button.is-inview {
+	opacity: 1;
+	transform: none;
+}
