feat: font clran up for lighthouse

--- a/src/scss/2-base/_typography.scss
+++ b/src/scss/2-base/_typography.scss
@@ -76,6 +76,7 @@ blockquote {
 	margin: 0 0 math.div(vars.$gutter, 2);
 	font-style: normal;
 	font-size: 1.125rem;
+	font-display: swap;
 }
 
 .p-xlarge {
