feat: update inputs

--- a/src/components/QwikTextField/style.scss
+++ b/src/components/QwikTextField/style.scss
@@ -1,14 +1,33 @@
+@mixin text-contrast($n) {
+	color: color-contrast(
+		$n vs var(--text1),
+		var(--text2),
+		var(--text3),
+		var(--text4)
+	);
+}
+
+@mixin background-contrast($n) {
+	background-color: color-contrast(
+		$n vs var(--text1),
+		var(--text2),
+		var(--text3),
+		var(--text4)
+	);
+}
+
 .textfield {
-	background: var(--surface6);
+	background: var(--surface1);
 	position: relative;
-	margin-bottom: 30px;
+	margin-top: 80px;
 
 	> input {
 		height: 60px;
-		width: 220px;
+		width: 100%;
 		padding-left: 30px;
 		border: 0;
-		color: rgba(0, 0, 0, 0.9);
+		color: var(--text1);
+		@include text-contrast(var(--surface4));
 		background: transparent;
 		outline: none;
 	}
@@ -16,9 +35,9 @@
 	> .underline {
 		position: absolute;
 		left: 0;
-		bottom: 0;
+		bottom: -30px;
 		width: 100%;
-		height: 2px;
+		height: 55px;
 		transform: scaleX(0);
 		transition: 0.4s;
 	}
@@ -26,8 +45,7 @@
 	> label,
 	> span {
 		position: absolute;
-		color: rgba(0, 0, 0, 0.5);
-		color: var(--text4);
+		@include text-contrast(var(--surface4));
 		translate: 0 -50%;
 		transition: 0.4s;
 		pointer-events: none;
@@ -41,40 +59,55 @@
 	> label {
 		top: 50%;
 		left: 30px;
-		color: var(--text4);
+		@include text-contrast(var(--surface4));
 	}
 
 	> :is(input:focus) ~ .underline {
+		--c: var(--text4);
+		--s: 1.15em;
 		transform: scaleX(1);
-		background-color: black;
+		@include background-contrast(var(--surface4));
+		background: conic-gradient(
+					from 135deg at top,
+					var(--c) 90deg,
+					var(--surface1) 0
+				)
+				left 0 bottom var(--s) / calc(2 * var(--s)) var(--s) repeat-x,
+			conic-gradient(
+					from -45deg at bottom,
+					var(--c) 90deg,
+					var(--surface1) 0
+				)
+				bottom 0 left var(--s) / calc(2 * var(--s)) var(--s) repeat-x;
 	}
 
 	> :is(input:focus) ~ span {
 		color: rgba(0, 0, 0, 0.9);
 	}
-
+	--scale-placeholder: 1.8;
+	--translate-placeholder: 40px -70px;
 	> :is(input:focus) ~ label {
-		translate: -40px -40px;
-		scale: 0.8;
-		color: var(--text4);
+		translate: var(--translate-placeholder);
+		scale: var(--scale-placeholder);
+		@include text-contrast(var(--surface4));
 	}
 
 	> :is(input.valid) ~ label {
-		translate: -40px -40px;
-		scale: 0.8;
-		color: var(--text4);
+		translate: var(--translate-placeholder);
+		scale: var(--scale-placeholder);
+		@include text-contrast(var(--surface4));
 	}
 
 	> :is(input.invalid) ~ label {
-		translate: -40px -40px;
-		scale: 0.8;
-		color: var(--text4);
+		translate: var(--translate-placeholder);
+		scale: var(--scale-placeholder);
+		@include text-contrast(var(--surface4));
 	}
 
 	> :is(input.invalid.anim) ~ label {
-		translate: -40px -40px;
-		scale: 0.8;
-		color: var(--text4);
+		translate: var(--translate-placeholder);
+		scale: var(--scale-placeholder);
+		@include text-contrast(var(--surface4));
 		animation: shake 0.3s ease-in-out;
 	}
 
