--- a/src/components/color-sheme-toggle/color-sheme-toggle.css
+++ b/src/components/color-sheme-toggle/color-sheme-toggle.css
@@ -1,4 +1,4 @@
-.theme-toggle-container {
+/* .theme-toggle-container {
 	padding: 5px;
 	direction: rtl;
 	button.light,
@@ -51,4 +51,4 @@
 	button:hover span {
 		transform: translateX(100%);
 	}
-}
+} */
