--- a/src/components/sliderHero/sliderHero.css
+++ b/src/components/sliderHero/sliderHero.css
@@ -1,46 +1,56 @@
 .slides {
-	width: 100%;
-	height: 100vh;
+	width: 600px;
+	height: 400px;
 	overflow: hidden;
-	display: grid;
-	grid-template-rows: 100%;
-	grid-template-columns: 100%;
-	place-items: center;
+	/* border: 30px solid black; */
+	position: relative;
 }
 
 .slide {
 	width: 100%;
 	height: 104%;
-	grid-area: 1 / 1 / -1 / -1;
 	pointer-events: none;
 	opacity: 1;
-	overflow: hidden;
-	position: relative;
+	/* z-index: 1; */
+	width: 600px;
+	height: 400px;
+	/* overflow: hidden; */
+	position: absolute;
 	will-change: transform;
+	/* border: 30px solid yellow; */
 }
 
 .slide--current {
 	pointer-events: auto;
 	opacity: 1;
+	z-index: 1;
+	/* border: 10px solid green; */
+}
+
+.slide--next {
+	pointer-events: auto;
+	opacity: 1;
+	z-index: 12;
 }
 
 .slide__inner {
-	width: 100%;
-	height: 100%;
-	display: grid;
+	width: 600px;
+	height: 400px;
+	/* display: grid;
 	grid-template-rows: 100%;
-	grid-template-columns: 100%;
-	position: relative;
-	overflow: hidden;
+	grid-template-columns: 100%; */
+	/* position: relative; */
+	/* overflow: hidden; */
 	will-change: transform;
 }
 
 .slide__img {
-	grid-area: 1 / 1 / -1 / -1;
-	overflow: hidden;
-	position: relative;
+	width: 600px;
+	height: 400px;
+	/* overflow: hidden; */
+	/* position: relative; */
 	cursor: pointer;
-	z-index: 1;
+	/* z-index: 11; */
 }
 
 .slide__img-inner {
@@ -53,7 +63,7 @@
 }
 
 .slide__content {
-	grid-area: 1 / 1 / -1 / -1;
+	/* grid-area: 1 / 1 / -1 / -1;
 	display: grid;
 	align-content: center;
 	justify-content: center;
@@ -62,7 +72,7 @@
 	grid-template-rows: auto auto auto;
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 2rem;
-	grid-template-areas: 'img title' 'img text' 'img ...';
+	grid-template-areas: 'img title' 'img text' 'img ...'; */
 }
 
 .slide__content-img {
