--- a/src/components/sliderHero/sliderHero.css
+++ b/src/components/sliderHero/sliderHero.css
@@ -10,7 +10,7 @@
 	width: 100%;
 	height: 104%;
 	pointer-events: none;
-	opacity: 1;
+	opacity: 0;
 	/* z-index: 1; */
 	width: 600px;
 	height: 400px;
@@ -73,6 +73,7 @@
 	grid-template-columns: 1fr 1fr;
 	grid-column-gap: 2rem;
 	grid-template-areas: 'img title' 'img text' 'img ...'; */
+	will-change: transform;
 }
 
 .slide__content-img {
