--- a/src/components/sliderHero/sliderHero.css
+++ b/src/components/sliderHero/sliderHero.css
@@ -11,7 +11,7 @@ dialog:not([open]) {
 }
 
 dialog::backdrop {
-	background: rgba(0, 5, 8, 0.991);
+	background: rgba(0, 5, 8, 0.691);
 }
 
 .navigation {
@@ -21,31 +21,26 @@ dialog::backdrop {
 }
 
 .slides {
-	width: 600px;
-	height: 400px;
+	width: 941px;
+	height: 557px;
 	overflow: hidden;
 	position: relative;
 }
 
 .slide {
-	width: 100%;
-	height: 104%;
 	pointer-events: none;
 	opacity: 0;
-	/* z-index: 1; */
-	width: 600px;
-	height: 400px;
+	width: 941px;
+	height: 557px;
 	overflow: hidden;
 	position: absolute;
 	will-change: transform;
-	/* border: 30px solid yellow; */
 }
 
 .slide--current {
 	pointer-events: auto;
 	opacity: 1;
 	z-index: 1;
-	/* border: 10px solid green; */
 }
 
 .slide--next {
@@ -55,23 +50,16 @@ dialog::backdrop {
 }
 
 .slide__inner {
-	width: 600px;
-	height: 400px;
-	/* display: grid;
-	grid-template-rows: 100%;
-	grid-template-columns: 100%; */
-	/* position: relative; */
+	width: 941px;
+	height: 557px;
 	overflow: hidden;
 	will-change: transform;
 }
 
 .slide__img {
-	width: 600px;
-	height: 400px;
-	/* overflow: hidden; */
-	/* position: relative; */
+	width: 941px;
+	height: 557px;
 	cursor: pointer;
-	/* z-index: 11; */
 }
 
 .slide__img-inner {
@@ -108,5 +96,5 @@ dialog::backdrop {
 	max-width: 260px;
 	line-height: 1.5;
 	margin: 0;
-	color: rgba(255, 255, 255, 0.5);
+	color: var(--text1);
 }
