--- a/src/components/layout/mainNav/main-nav.scss
+++ b/src/components/layout/mainNav/main-nav.scss
@@ -141,13 +141,14 @@
 
 		&__overlay {
 			position: absolute;
-			top: 150px;
+			top: 0px;
 			left: 0;
 			width: 100%;
 			height: 100vh;
 			opacity: 0;
 			// background-color: var(--surface2);
-			background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0));
+			background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.4));
+			// background: red;
 			transition: opacity $duration $timing;
 			pointer-events: none;
 
@@ -212,6 +213,7 @@
 		&__main {
 			position: relative;
 			background-color: var(--surface1);
+			background-color: yellow;
 			&::before {
 				content: '';
 				position: absolute;
@@ -239,6 +241,7 @@
 			// justify-content: space-between;
 			// flex-direction: column-reverse;
 			background: var(--surface1);
+			background: green;
 			height: 70px;
 			width: 100%;
 			transition: height $duration $timing;
@@ -298,6 +301,7 @@
 
 			&:focus {
 				background-color: var(--brand);
+				background-color: yellow;
 				opacity: 1;
 			}
 
@@ -401,9 +405,11 @@
 			padding: 24px 48px;
 			pointer-events: none;
 			opacity: 0;
+			// opacity: 1;
 			min-height: 70vh;
 			transform: translateY(160px);
 			background-color: var(--surface3);
+			// background-color: yellow;
 			transition-property: opacity, transform;
 			transition-duration: $duration;
 			transition-timing-function: $timing;
@@ -411,6 +417,7 @@
 				pointer-events: all;
 				opacity: 1;
 				transform: none;
+				// transform: translateY(-10px);
 			}
 		}
 
