--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @use '/src/scss/grid/main';
+@use '/src/scss/00-vars/_00-vars' as vars;
 @use '/src/scss/00-vars/colors-shemes';
 @use '/src/scss/layout/layout';
 @use '/src/scss/2-base/2-base' as base;
