--- a/src/scss/grid/_row.scss
+++ b/src/scss/grid/_row.scss
@@ -8,6 +8,11 @@
 	max-width: vars.$basicGrid__width;
 }
 
+.container_full {
+	margin: 0 auto;
+	width: 100vw;
+}
+
 .row {
 	display: flex;
 	flex-wrap: wrap;
