feat: update animation

--- a/src/components/section_intro/section_intro.scss
+++ b/src/components/section_intro/section_intro.scss
@@ -46,7 +46,7 @@
 
 	&__surname {
 		font-size: 120px;
-		-webkit-text-stroke: 1px #000;
+		-webkit-text-stroke: 1px var(--surface1);
 		color: transparent
 	}
 
