--- a/src/components/layout/mainNav/main-nav.scss
+++ b/src/components/layout/mainNav/main-nav.scss
@@ -1,12 +1,7 @@
 @use 'sass:math';
 
 @mixin text-contrast($n) {
-	color: color-contrast(
-		$n vs var(--text1),
-		var(--text2),
-		var(--text3),
-		var(--text4)
-	);
+	color: color-contrast($n vs var(--text1), var(--text2), var(--text3), var(--text4));
 }
 
 .navigation {
@@ -104,14 +99,7 @@
 				content: '';
 				width: 0.65em;
 				height: 0.65em;
-				clip-path: polygon(
-					14% 44%,
-					0 65%,
-					50% 100%,
-					100% 16%,
-					80% 0%,
-					43% 62%
-				);
+				clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
 				transform: scale(0);
 				transform-origin: bottom left;
 				transition: 120ms transform ease-in-out;
@@ -178,7 +166,7 @@
 			padding: 10px 20px;
 			@include text-contrast(var(--surface2));
 			background-color: var(--surface2);
-			font-weight: 500;
+			// font-weight: 500;
 			text-decoration: none;
 			// opacity: .5;
 			transition: opacity $duration $timing;
@@ -252,6 +240,12 @@
 
 		// Items --------------------------------------------------- //
 
+		.hover {
+			background-color: var(--surface5);
+			opacity: 1;
+			@include text-contrast(var(--surface5));
+		}
+
 		&__items {
 			display: flex;
 			justify-content: flex-end;
@@ -272,10 +266,6 @@
 				font-size: 0.814em;
 			}
 
-			&:last-child {
-				// margin-right: 0;
-			}
-
 			&.inactive:not(.active) {
 				opacity: 0.2;
 			}
@@ -284,6 +274,12 @@
 				background-color: var(--surface3);
 				@include text-contrast(var(--surface3));
 				opacity: 0.6;
+			}
+
+			&.active.hover {
+				background-color: var(--surface3);
+				@include text-contrast(var(--surface3));
+				opacity: 1;
 			}
 
 			&.active.inactive {
@@ -437,6 +433,7 @@
 			background-color: var(--surface3);
 			@include text-contrast(var(--surface2));
 			font-size: 1.4em;
+			font-weight: 500;
 			line-height: 1.3;
 			text-decoration: none;
 			transition: transform $duration $timing;
@@ -444,9 +441,13 @@
 			&:hover {
 				background-color: var(--surface1);
 				@include text-contrast(var(--surface1));
-				font-weight: 500;
 				transform: translateX(10px);
 			}
+		}
+
+		&__subitem.initial {
+			background-color: var(--surface1);
+			transform: translateX(10px);
 		}
 
 		&__arrow {
