feat: add portfolios

--- a/src/scss/2-base/_2-base.scss
+++ b/src/scss/2-base/_2-base.scss
@@ -1,6 +1,7 @@
 // _2-base Styles ------------------------------------------------------ //
 @use 'html';
 @use 'body';
+@use 'img';
 // @import 'img';
 // @import 'table';
 // @import 'hr';
